# powerbi-mcp-server

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
sample/: Contoso Coffee Shop.pbip
sample/Contoso Coffee Shop.Report/: .platform  definition.pbir
sample/Contoso Coffee Shop.Report/definition/: report.json
sample/Contoso Coffee Shop.Report/definition/pages/: pages.json
sample/Contoso Coffee Shop.Report/definition/pages/page001/: page.json
sample/Contoso Coffee Shop.Report/definition/pages/page001/visuals/vis_combo/: visual.json
sample/Contoso Coffee Shop.Report/definition/pages/page001/visuals/vis_orders/: visual.json
sample/Contoso Coffee Shop.Report/definition/pages/page001/visuals/vis_revenue/: visual.json
sample/Contoso Coffee Shop.Report/definition/pages/page001/visuals/vis_table/: visual.json
sample/Contoso Coffee Shop.Report/definition/pages/page002/: page.json
sample/Contoso Coffee Shop.Report/definition/pages/page002/visuals/vis_avg_price/: visual.json
sample/Contoso Coffee Shop.SemanticModel/: .platform
sample/Contoso Coffee Shop.SemanticModel/definition/: model.tmdl  relationships.tmdl
sample/Contoso Coffee Shop.SemanticModel/definition/tables/: Contoso Measures.tmdl  DimDate.tmdl  DimProduct.tmdl  DimStore.tmdl  FactSales.tmdl
src/powerbi_mcp/: __init__.py  __main__.py  config.py  model_tools.py  pbip_reader.py  report_tools.py  server.py  tmdl_parser.py
tests/: test_update_measure.py  test_visual_path_traversal.py  test_visual_writer.py
(+1 files in other folders)
